# bevy-inspection.vscode

./: .gitignore  .vscodeignore  CONTRIBUTING.md  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
example/: Cargo.toml
example/src/: main.rs
examples/0.16/: Cargo.toml
src/: client-collection.ts  client-list.ts  client.ts  common.ts  components.ts  componentsData.ts  componentsProvider.ts  componentsView.ts  connection-list.ts  connection.ts  elements.ts  entities.ts  entitiesProvider.ts  extension.ts  hierachy.ts  hierarchy.ts  hierarchyData.ts  inspection.ts  session-manager.ts  session.ts
src/protocol/: common.ts  protocol.ts  types.ts
src/web/: components.css  components.html  components.ts  componentsElements.ts  componentsStyles.ts  lib.ts
src/web-components/: data.ts  elements.ts  errors.ts  index.css  index.html  index.ts  lib.ts  main.css  main.html  main.ts  section-components.ts  section-details.ts  section-errors.ts  section-sync.ts  styles.ts  sync.ts  visual-expandable.ts  visual.ts  visuals.ts
test/: components-sync.ts  protocol-methods.ts  protocol.ts  sync-debug-tree.txt  sync-get-response-result.json  sync-get-response.json  sync-initial-tree.txt  sync-mutated-tree.txt  sync.ts
test/components-sync/: sync-components-1.txt  sync-components-2.txt  sync-enum-1.txt  sync-enum-3.txt  (+13 more)
test/server-all-types/: .gitignore  Cargo.toml
test/server-all-types/src/: main.rs
test/server-scene/: Cargo.toml
test/server-scene/src/: main.rs
web/: components.css  components.html  components.js  components.ts
(+2 files in other folders)
