[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = [
    "dynamic_linking",
    "bevy_remote",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
